--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BITA9ET TAARIF</title>
+    <title>boyaaa kbert</title>
     <div><a href="index2.html">inzel nyk m5ayb rasek</a></div>
     <style>
         /* Global Styles */
